# aklp-task

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  pyproject.toml  skaffold.md  skaffold.yaml
.github/workflows/: build.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 20251121_1950_b7bc85e704ff_create_tasks_table.py  20251121_2036_f7e2f04f0ecf_add_timezone_to_datetime_columns.py  20251205_1213_71e2d999a714_add_reason_to_task_batches.py  20251205_2023_89b9a28536f6_add_task_batches_table_and_batch_id_to_.py
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  batches.py  tasks.py
app/core/: __init__.py  config.py  deps.py  exceptions.py  logging.py
app/middleware/: __init__.py  error_handler.py  logging.py  request_id.py
app/models/: __init__.py  base.py  batch.py  task.py
app/schemas/: __init__.py  batch.py  responses.py  task.py
app/services/: __init__.py  batch_service.py  task_service.py
app/utils/: __init__.py  http_client.py
k8s/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
