[project]
name = "service-template"
version = "0.1.0"
description = "FastAPI service template for AKLP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-json-logger>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "commitizen>=3.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008", # function call in argument defaults (FastAPI Query, Path, etc.)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "alembic",
    "alembic.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.main"
# Allow untyped decorators for FastAPI event handlers
# Disable arg-type for exception handlers
disallow_untyped_decorators = false
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "app.api.*"
# Allow untyped decorators for FastAPI route handlers
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["app.core.config", "app.middleware.*"]
# Disable misc checks for BaseSettings and BaseHTTPMiddleware
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "app.core.logging"
# pythonjsonlogger has no type stubs
disable_error_code = ["import-untyped", "attr-defined", "assignment"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "app/__init__.py:__version__"
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true